fixed hidden scrollbar bug for code blocks

--- a/themes/basic/assets/css/components/code_blocks/main.css
+++ b/themes/basic/assets/css/components/code_blocks/main.css
@@ -9,8 +9,7 @@ code {
 }
 
 .highlight > div {
-    border-radius: 10px;
-    overflow-x: auto;
+    border-radius: 1rem;
 }
 
 .highlight pre {
@@ -27,8 +26,8 @@ code {
     left: 0;
     background: #333;
     color: white;
-    border-top-left-radius: 9px;
-    border-bottom-right-radius: 7px;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     cursor: pointer;
 }
 
@@ -40,6 +39,6 @@ code {
     padding: 2px 15px;
     background: #333;
     color: white;
-    border-bottom-left-radius: 9px;
-    border-top-right-radius: 7px;
+    border-bottom-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 }
